--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <img src="./assets/me.jpg" class="about-me__picture" alt="Picture of Me">
                     </figure>
                 <h1 class="about-me__info--title">
-                    Hey! I'm <span class="text--green">Linda McPhee-Smith</span> 👋
+                    Hello! I'm <span class="text--green">Linda McPhee-Smith</span> 👋
                 </h1>
                 <p class="about-me__info--para">I'm a <strong class="text--green">frontend software engineer</strong> excited to build responsive web applications with user experiences that positively impact others.
                 </p>
