--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linda McPhee-Smith</title>
      <link rel="stylesheet" href="./styles.css">
+     <script src="https://kit.fontawesome.com/3c8307fb37.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="about-me">
@@ -44,6 +45,22 @@
                 </h1>
                 <p class="about-me__info--para">I'm a <strong class="text--green">frontend software engineer</strong> excited to build responsive web applications with user experiences that positively impact others.
                 </p>
+                <div class="about-me__links">
+                    <a href="" class="about-me__link">
+                         <i class="fa-brands fa-square-linkedin"></i>
+                         </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-brands fa-github"></i>
+                        </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-regular fa-envelope"></i>
+                        </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-regular fa-file-pdf"></i>
+                        </a>
+
+                </div>
+               
                 </div>
 
             </div>
