Finish landing page

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                         <i class="fa-brands fa-github"></i>
                         </a>
                     <a href="" class="about-me__link">
-                        <i class="fa-regular fa-envelope"></i>
-                        </a>
+                         </a>
                     <a href="" class="about-me__link">
                         <i class="fa-regular fa-file-pdf"></i>
                         </a>
-
-                </div>
-               
                 </div>
 
+                </div>
+                    <figure class="about-me__img--container"> 
+                        <img src="./assets/undraw_web-development_f0tp.svg" class="about-me__img" alt="">
+                    </figure>
             </div>
         </div>
     </section>
